[package]
name = "civic_sip"
version = "0.1.0"
authors = ["Pierre Tomasina <tomasinap@pm.me>"]
edition = "2018"
repository = "https://github.com/pierozi/rust-civic-sip"
documentation = "https://github.com/pierozi/rust-civic-sip/blob/master/README.md"
readme = "README.md"
keywords = ["blockchain", "civic", "sso", "jwt"]
categories = ["authentication", "cryptography"]
license = "BSD-3-Clause"
publish=false

[dependencies]
frank_jwt = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.10"
openssl = "0.10"
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = "0.4"
hmac = "0.7"
sha2 = "0.8"
reqwest = "0.9"
